[package]
name = "tg-bot"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "9b514902f191f7dc0a76ba50486789092ee3f59c" }
structopt = "0.3.3"
rand = "0.7.2"
tokio = "1.18.5"
futures-preview = "=0.3.0-alpha.19"